--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,24 @@
   src: url('/fonts/Montserrat-Regular.ttf');
 }
 
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+  height: 100vh;
+}
+
 * {
   box-sizing: border-box;
+}
+
+body {
+  background-image: url("/home-page-bg.svg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 html {
@@ -76,4 +92,3 @@ h1 {
   font-weight: bold;
   text-align: center;
 }
-
