--- a/src/mixins/flex-mixin.scss
+++ b/src/mixins/flex-mixin.scss
@@ -9,3 +9,9 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@mixin flex-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
