--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -1,18 +1,22 @@
-.over-flow {
+.form-wrapper {
   width: 100%;
-  height: 100%;
+  height: auto;
 
-  position: absolute;
-  z-index: 1000;
+  backdrop-filter:  brightness(20%);
 
-  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-container {
   width: 1300px;
-  height: 840px;
+  height: 800px;
 
-  margin: 0 auto;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
   background-image: url('/form-back.svg');
   backdrop-filter: brightness(0.5);
 
