--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,14 +2,103 @@
 
 .home {
   width: 100%;
+  height: auto;
+
+  z-index: 1;
+  @include flex-mixin.flex-center;
+}
+
+.left-block {
+  width: 50%;
   height: 1000px;
 
+  background: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(20px);
+
+  flex-direction: column;
   @include flex-mixin.flex-center;
 
-  background-image: url("/home-page-bg.svg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  h2 {
+    position: relative;
 
-  border: 1px solid red;
+    left: 200px;
+    top: -300px;
+
+    font-weight: 800;
+    font-size: 150px;
+    background: url('/home-page-bg.svg');
+    background-size: cover;
+    filter: brightness(60%);
+    background-repeat: no-repeat;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+.right-block {
+  width: 50%;
+  height: 1000px;
+
+  flex-direction: column;
+  @include flex-mixin.flex-center;
+
+  h2 {
+    position: relative;
+    right: 100px;
+    top: 0;
+    color: white;
+    font-weight: 800;
+    font-size: 140px;
+  }
+}
+
+.info-block {
+  width: 100%;
+  margin-top: 400px;
+
+  @include flex-mixin.flex-center;
+  flex-direction: column;
+
+  .p-container {
+    width: 100%;
+    height: auto;
+    @include flex-mixin.flex-center;
+    flex-direction: row;
+
+    margin-bottom: 70px;
+
+    p {
+      font-size: 1.2rem;
+      font-weight: 300;
+      color: white;
+      width: 70%;
+
+      letter-spacing: 0.2rem;
+    }
+  }
+}
+
+.briefcase {
+  width: 100%;
+  height: 40px;
+
+  @include flex-mixin.flex-start;
+  flex-direction: row;
+
+  padding-left: 140px;
+
+  .home-link {
+    font-family: "Montserrat";
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #F1F1E7;
+    text-decoration: underline;
+    text-underline-offset: 7px;
+
+    margin-right: 1rem;
+
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+  }
 }
