--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,8 +4,18 @@
   width: 100%;
   height: auto;
 
-  z-index: 1;
+  z-index: 5000;
   @include flex-mixin.flex-center;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1000px;
+    background: rgb(0, 0, 0, 0.5);
+  }
 }
 
 .left-block {
