--- a/src/pages/Survey/Survey.scss
+++ b/src/pages/Survey/Survey.scss
@@ -2,9 +2,159 @@
 
 .survey {
   width: 100%;
+  height: 100%;
+
+  @include flex-mixin.flex-center;
+  flex-direction:  column;
+
+}
+
+.survey-block {
+  width: 1300px;
+  height: auto;
+  padding-bottom: 1rem;
+
+  background: rgba(55, 53, 53, 0.6);
+
+  display: flex;
+  flex-direction: column;
+
+  border-radius: 50px;
+}
+
+.survey-article {
+  width: 100%;
+  height: auto;
+
+  gap: 1rem;
+
+  @include flex-mixin.flex-center;
+  flex-direction: column;
+
+  h1 {
+    font-weight: 800;
+    font-size: 2.2rem;
+    color: #F1F1E7;
+  }
+
+  p {
+    color: #F1F1E7;
+    font-size: 1rem;
+    font-weight: 200;
+    margin-bottom: 20px;
+  }
+
+}
+
+.survey-header {
+  width: 100%;
+  height: 40px;
+  padding-top: 1rem;
+  margin-bottom: 0.8rem;
+
+  p {
+    color: white;
+    font-weight: 300;
+    font-size: 1.2rem;
+  }
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+}
+
+.question-block {
+  width: 100%;
   height: auto;
 
   @include flex-mixin.flex-center;
   flex-direction:  column;
+
+  gap: 1rem;
+}
+
+.radio-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  background-color: #f1f1e7;
+  width: 700px;
+  height: 70px;
+  border-radius: 5px;
+  padding-left: 1.1rem;
+  cursor: pointer;
+
+  margin-bottom: 2.2rem;
+
+  input[type="radio"] {
+    display: none;
+  }
+
+  .custom-radio {
+    width: 30px;
+    height: 30px;
+    border: 2px solid #8B833E;
+    border-radius: 50%;
+    background-color: white;
+    transition: all 0.2s ease;
+    position: relative;
+  }
+
+  input[type="radio"]:checked + .custom-radio {
+    border-color: #8B833E;
+    background-color: #8B833E;
+    box-shadow: 0 0 0 4px rgba(47, 58, 39, 0.2);
+  }
+
+  p {
+    font-size: 1rem;
+    color: #333;
+    text-align: center;
+  }
+}
+
+.survey-config {
+  width: 100%;
+  height: auto;
+
+  @include flex-mixin.flex-center;
+  flex-direction: row;
+
+  gap: 3rem;
+}
+
+.next-end-button {
+  width: 150px;
+  height: 60px;
+  border-radius: 10px;
+  background-color:  #8B833E;
+  color: #f1f1e7;
+  font-weight: 500;
+  font-size: 1.1rem;
+  box-shadow:  0 1px 3px rgba(0,0,0,0.25);
+
+
+  &:hover {
+    background-color: #746f38;
+    cursor: pointer;
+  }
+}
+
+.prev-skip-button {
+  background: none;
+  border:  none;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  font-weight: 400;
+  font-size: 1.1rem;
+  color: #F1F1E7;
+
+  &:hover {
+    text-decoration: underline;
+    text-underline-offset: 0.3rem;
+  }
 
 }
