--- a/src/index.css
+++ b/src/index.css
@@ -10,85 +10,34 @@
   src: url('/fonts/Montserrat-Regular.ttf');
 }
 
-.main-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  width: 100%;
-  height: 100vh;
-}
-
 * {
   box-sizing: border-box;
-}
-
-body {
-  background-image: url("/home-page-bg.svg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 html {
   font-family: 'Manrope';
 }
 
-.form-login {
-  width: 1200px;
-  height: 740px;
-
-  backdrop-filter: blur(10px);
-
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-
-
-  input {
-    width: 100%;
-    height: 25px;
-    padding: 1rem;
-
-    margin-bottom: 50px;
-
-    color: rgba(255, 255, 255, 0.5);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.502);
-
-    background: none;
-
-    outline: none;
-
-    &:focus {
-      border-bottom: 1px solid white;
-    }
-
-    &::placeholder {
-      color: rgba(255, 255, 255, 0.5);
-    }
-  }
-
-  button {
-    width: 100%;
-    height: 50px;
-    background-color: #3F4222;
-    font-weight: 700;
-    font-size: 1rem;
-    color: white;
-    border-radius: 2px;
-    border: none;
-
-    &:hover {
-      background-color: #4f532c;
-      color: white;
-      cursor: pointer;
-    }
-  }
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
 }
 
 h1 {
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/home-page-bg.svg");
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
 }
