--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -1,30 +1,83 @@
+@use "../../mixins/flex-mixin.scss";
+@use "../../mixins/background-mixin.scss";
+
 .form-wrapper {
+  @include flex-mixin.flex-center;
+  flex-direction:  column;
+
+  height: 100dvh;
   width: 100%;
-  height: auto;
+}
 
-  backdrop-filter:  brightness(20%);
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.form-bg {
+  @include background-mixin.background-img('/dark-bg.jpg');
 }
 
 .form-container {
+  position: relative;
+  z-index: 1;
   width: 1300px;
   height: 800px;
 
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 4rem;
 
-  background-image: url('/form-back.svg');
-  backdrop-filter: brightness(0.5);
-
-  display: flex;
-  justify-content: center;
-  align-content: center;
+  @include flex-mixin.flex-center;
+  flex-direction: column;
 
   padding: 50px;
+}
+
+.form-login {
+  width: 1200px;
+  height: 700px;
+
+  backdrop-filter: blur(10px);
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+
+  input {
+    width: 100%;
+    height: 25px;
+    padding: 1rem;
+
+    margin-bottom: 50px;
+
+    color: rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.502);
+
+    background: none;
+
+    outline: none;
+
+    &:focus {
+      border-bottom: 1px solid white;
+    }
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.5);
+    }
+  }
+
+  button {
+    width: 100%;
+    height: 50px;
+    background-color: #3F4222;
+    font-weight: 700;
+    font-size: 1rem;
+    color: white;
+    border-radius: 2px;
+    border: none;
+
+    &:hover {
+      background-color: #4f532c;
+      color: white;
+      cursor: pointer;
+    }
+  }
 }
 
 .form-inside-container {
