--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,13 @@
 @use "../../mixins/flex-mixin.scss";
 
+.home-wrapper {
+  @include flex-mixin.flex-center;
+  flex-direction:  column;
+
+  height: 100dvh;
+  width: 100%;
+}
+
 .home {
   width: 100%;
   height: auto;
