--- a/src/pages/Survey/Survey.scss
+++ b/src/pages/Survey/Survey.scss
@@ -1,12 +1,27 @@
 @use "../../mixins/flex-mixin.scss";
+@use "../../mixins/background-mixin";
+
+.survey-wrapper {
+  @include flex-mixin.flex-center;
+  flex-direction:  column;
+
+  height: 100dvh;
+  width: 100%;
+}
 
 .survey {
+  position: relative;
+  z-index: 1;
   width: 100%;
   height: 100%;
 
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
+}
+
+.survey-bg {
+  @include background-mixin.background-img('/success-bg.svg');
 }
 
 .survey-block {
