--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -120,3 +120,20 @@
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
   }
 }
+
+
+@media (max-width: 1800px) {
+  .left-block {
+    h2 {
+      font-size: 100px;
+      left: 10px;
+    }
+  }
+
+  .right-block {
+    h2 {
+      font-size: 100px;
+      left: 10px;
+    }
+  }
+}
