--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,18 +17,45 @@
   @include flex-mixin.flex-space-between;
 }
 
-.language-circle {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 2px solid white;
+.menu-wrapper {
+  position: relative;
+  display: inline-block;
 
-  color: white;
+  .menu-toggle {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid white;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+  }
 
-  @include flex-mixin.flex-center;
+  .submenu {
+    position: absolute;
+    top: 65px;
+    left: -120px;
+    transform: translateY(-50%);
+    min-width: 150px;
+    background: white;
+    color: black;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    z-index: 10;
+  }
 
-  p {
-    font-family: "Montserrat";
-    font-size: 1.2rem;
+  .submenu div {
+    cursor: pointer;
+    padding: 0.5rem;
+    border-radius: 6px;
+    transition: background 0.2s;
+
+    &:hover {
+      background: #eee;
+    }
   }
 }
