--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,7 +34,7 @@
   .submenu {
     position: absolute;
     top: 65px;
-    left: -120px;
+    left: -120px  ;
     transform: translateY(-50%);
     min-width: 150px;
     background: white;
@@ -59,3 +59,28 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .header {
+    @include flex-mixin.flex-center;
+    flex-direction: row;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .menu-wrapper {
+    display: none;
+
+    .menu-toggle {
+      z-index: 9999;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 2px solid white;
+      background: transparent;
+      color: white;
+      cursor: pointer;
+    }
+  }
+}
+
