--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -124,3 +124,76 @@
   height: 250px;
   background-color: rgba(255, 255, 255, 0.5);
 }
+
+@media (max-width: 1200px) {
+  .form-container {
+    width: 100%;
+    height: auto;
+    padding: 30px;
+  }
+
+  .form-login {
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+    gap: 2rem;
+  }
+
+  .form-inside-container,
+  .form-vertical-container {
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .form-inside-container-left {
+    width: 100%;
+    padding: 20px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .horizontal-line {
+    width: 80%;
+    height: 1px;
+    margin: 1rem 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .form-wrapper {
+    height: auto;
+  }
+
+  .form-container {
+    padding: 20px;
+    z-index: 0;
+  }
+
+  .form-login {
+    padding: 20px;
+  }
+
+  .form-inside-container-left {
+    padding: 10px;
+  }
+
+  .form-vertical-container {
+    padding-right: 0;
+
+    p {
+      font-size: 1rem;
+      text-align: center;
+    }
+  }
+
+  input {
+    font-size: 1rem;
+  }
+
+  button {
+    font-size: 1rem;
+  }
+}
