--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,7 +4,7 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  height: 100dvh;
+  height: auto;
   width: 100%;
 }
 
@@ -20,7 +20,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     height: 1000px;
     background: rgb(0, 0, 0, 0.5);
   }
@@ -43,7 +42,7 @@
     top: -300px;
 
     font-weight: 800;
-    font-size: 150px;
+    font-size: clamp(2rem, 8vw, 150px);
     background: url('/home-page-bg.svg');
     background-size: cover;
     filter: brightness(60%);
@@ -68,7 +67,7 @@
     top: 0;
     color: white;
     font-weight: 800;
-    font-size: 140px;
+    font-size: clamp(2rem, 8vw, 150px);
   }
 }
 
@@ -122,18 +121,83 @@
 }
 
 
-@media (max-width: 1800px) {
-  .left-block {
+@media (max-width: 1200px) {
+  .left-block,
+  .right-block {
+    height: 1000px;
+
     h2 {
-      font-size: 100px;
-      left: 10px;
+      font-size: 80px;
+      left: 0;
+      top: 0;
+      text-align: center;
     }
   }
 
+  .info-block {
+    margin-top: 200px;
+
+    .p-container {
+      flex-direction: column;
+      p {
+        width: 90%;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .left-block h2,
+  .right-block h2 {
+    font-size: 60px;
+  }
+
+  .briefcase {
+    padding-left: 40px;
+    .home-link {
+      font-size: 1rem;
+    }
+  }
+
+  .info-block .p-container {
+    p {
+      font-size: 1rem;
+      letter-spacing: 0.1rem;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .home-wrapper {
+    height: 100vh;
+  }
+
+  .left-block,
   .right-block {
     h2 {
-      font-size: 100px;
-      left: 10px;
+      font-size: 40px;
+    }
+  }
+
+  .briefcase {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 20px;
+
+    .home-link {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  .info-block {
+    margin-top: 100px;
+    .p-container {
+      margin-bottom: 40px;
+
+      p {
+        font-size: 0.9rem;
+      }
     }
   }
 }
