--- a/src/pages/Success/Success.scss
+++ b/src/pages/Success/Success.scss
@@ -63,3 +63,44 @@
     cursor: pointer;
   }
 }
+
+@media (max-width: 1400px) {
+
+  .success {
+    width: 100%;
+    padding: 5rem;
+
+    text-align: center;
+
+    img {
+      width: 100px;
+      height: 100px;
+    }
+
+    h1 {
+      font-size: 1.2rem;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+  }
+
+  .success-btn {
+    width: 110px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: #8B833E;
+
+    box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.2);
+    color: #F1F1E7;
+
+    font-weight: 500;
+    font-size: 0.8rem;
+
+    &:hover {
+      background-color: #4f532c;;
+      cursor: pointer;
+    }
+  }
+}
