--- a/src/pages/Survey/Survey.scss
+++ b/src/pages/Survey/Survey.scss
@@ -173,3 +173,67 @@
   }
 
 }
+
+
+@media (max-width: 768px) {
+
+  .survey-wrapper {
+    height: auto;
+    width: 100%;
+
+    h1 {
+      font-size: 1.2rem;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+  }
+
+  .survey-block {
+    width: 90%;
+    padding: 5rem;
+  }
+
+  .radio-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    background-color: #f1f1e7;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    padding-left: 1.1rem;
+    cursor: pointer;
+
+    margin-bottom: 2.2rem;
+
+    input[type="radio"] {
+      display: none;
+    }
+
+    .custom-radio {
+      width: 30px;
+      height: 30px;
+      border: 2px solid #8B833E;
+      border-radius: 50%;
+      background-color: white;
+      transition: all 0.2s ease;
+      position: relative;
+    }
+
+    input[type="radio"]:checked + .custom-radio {
+      border-color: #8B833E;
+      background-color: #8B833E;
+      box-shadow: 0 0 0 4px rgba(47, 58, 39, 0.2);
+    }
+
+    p {
+      font-size: 1rem;
+      color: #333;
+      text-align: center;
+    }
+  }
+}
+
