--- a/src/admin/Admin.scss
+++ b/src/admin/Admin.scss
@@ -1,8 +1,8 @@
 .admin-container {
   width: 100%;
-  height: 100%;
+  height: 1000px;
 
-  background-color: rgba(0, 0, 0, 0.6);
+  background: #3d3d3d;
 
   gap: 1rem;
   padding: 1rem;
