--- a/src/index.css
+++ b/src/index.css
@@ -12,33 +12,15 @@
 
 * {
   box-sizing: border-box;
-}
-
-html {
-  font-family: 'Manrope';
+  margin: 0;
+  padding: 0;
 }
 
 html, body {
   height: 100%;
-  margin: 0;
-  overflow-x: hidden;
 }
 
 
-h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-}
-
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("/home-page-bg.svg");
-  background-size: cover;
-  background-position: center;
-  z-index: 0;
+html {
+  font-family: 'Manrope';
 }
