--- a/src/mixins/flex-mixin.scss
+++ b/src/mixins/flex-mixin.scss
@@ -15,3 +15,9 @@
   justify-content: flex-start;
   align-items: center;
 }
+
+@mixin flex-end {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
