--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -5,25 +5,32 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  height: 100dvh;
+  height: auto;
   width: 100%;
+
+  margin: 0 auto;
 }
 
 .form-bg {
   @include background-mixin.background-img('/dark-bg.jpg');
+  filter: brightness(50%);
 }
 
 .form-container {
   position: relative;
   z-index: 1;
   width: 1300px;
-  height: 800px;
+  height: 780px;
 
-  margin-top: 4rem;
+
+  border-radius: 1px;
+
+  margin-top: 90px;
 
   @include flex-mixin.flex-center;
   flex-direction: column;
 
+  background-image: url("/form-back.svg");
   padding: 50px;
 }
 
@@ -79,7 +86,26 @@
     }
   }
 }
+.form-article {
+  width: 50%;
+  height: auto;
+  padding-left: 1rem;
+  color: #F1F1E7;
 
+  position: relative;
+  top: -100px;
+
+  h2 {
+    font-weight: 800;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-weight: 500;
+    font-size: 1.2rem;
+  }
+}
 .form-inside-container {
   width: 50%;
   height: 100%;
@@ -93,7 +119,7 @@
 
 .form-inside-container-left {
   width: 100%;
-  height: 100%;
+  height: 740px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -101,29 +127,15 @@
   padding-top: 50px;
   padding-left: 20px;
   padding-right: 55px;
-}
 
-.form-vertical-container {
-  width: 35%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  padding-right: 45px;
-
-  p {
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 1.2rem;
-    font-weight: 700;
+  h1 {
+    margin-bottom: 70px;
+    font-weight: 800;
+    font-size: 2rem;
+    color: #f1f1e7;
   }
 }
 
-.horizontal-line {
-  width: 1px;
-  height: 250px;
-  background-color: rgba(255, 255, 255, 0.5);
-}
 
 @media (max-width: 1200px) {
   .form-container {
