--- a/src/pages/Success/Success.scss
+++ b/src/pages/Success/Success.scss
@@ -39,7 +39,8 @@
     font-size: 1.2rem;
     font-weight: 200;
     color: #F1F1E7;
-    margin-bottom: 5px;
+    width: 660px;
+    text-align: center;
   }
 
   border-radius: 50px;
