--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -60,26 +60,13 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .header {
-    @include flex-mixin.flex-center;
-    flex-direction: row;
-    gap: 1rem;
     padding: 1rem;
-  }
 
-  .menu-wrapper {
-    display: none;
-
-    .menu-toggle {
-      z-index: 9999;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      border: 2px solid white;
-      background: transparent;
-      color: white;
-      cursor: pointer;
+    img {
+      width: 150px;
+      height: 50px;
     }
   }
 }
