--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -5,27 +5,36 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  height: auto;
+  min-height: 100vh;
   width: 100%;
 
   margin: 0 auto;
 }
 
 .form-bg {
-  @include background-mixin.background-img('/dark-bg.jpg');
+  background-image: url("/dark-bg.jpg");
   filter: brightness(50%);
+  background-size: cover;
+  background-attachment: fixed;
+  pointer-events: none;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 .form-container {
   position: relative;
   z-index: 1;
-  width: 1300px;
+  width: clamp(300px, 80vw, 1300px);
   height: 780px;
 
 
   border-radius: 1px;
-
-  margin-top: 90px;
 
   @include flex-mixin.flex-center;
   flex-direction: column;
@@ -35,14 +44,14 @@
 }
 
 .form-login {
-  width: 1200px;
+  width: auto;
   height: 700px;
 
   backdrop-filter: blur(10px);
 
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 
 
@@ -68,8 +77,9 @@
       color: rgba(255, 255, 255, 0.5);
     }
   }
+}
 
-  button {
+.form-button {
     width: 100%;
     height: 50px;
     background-color: #3F4222;
@@ -84,7 +94,22 @@
       color: white;
       cursor: pointer;
     }
-  }
+}
+
+.form-sign-up-button {
+    width: 100%;
+    height: 50px;
+    font-weight: 400;
+    font-size: 1rem;
+    color: white;
+    background: none;
+    border: none;
+
+    &:hover {
+      text-decoration: underline;
+      text-underline-offset: 0.5rem;
+      cursor: pointer;
+    }
 }
 .form-article {
   width: 50%;
@@ -137,75 +162,58 @@
 }
 
 
-@media (max-width: 1200px) {
-  .form-container {
-    width: 100%;
-    height: auto;
-    padding: 30px;
-  }
+@media (max-width: 1000px) {
 
-  .form-login {
-    width: 100%;
-    flex-direction: column;
-    height: auto;
-    gap: 2rem;
-  }
-
-  .form-inside-container,
-  .form-vertical-container {
-    width: 100%;
-    height: auto;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
-
-  .form-inside-container-left {
-    width: 100%;
-    padding: 20px;
-    align-items: center;
-    text-align: center;
-  }
-
-  .horizontal-line {
-    width: 80%;
-    height: 1px;
-    margin: 1rem 0;
-  }
-}
-
-@media (max-width: 768px) {
   .form-wrapper {
-    height: auto;
+    @include flex-mixin.flex-center;
+    flex-direction: column;
+
+    overflow: hidden;
+
+    border: 5px solid green;
+  }
+
+  .form-bg {
+    background-image: url("/form-back.svg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-size: cover;
   }
 
   .form-container {
-    padding: 20px;
-    z-index: 0;
+    background: none;
+    width: 100%;
+    padding: 0;
+    height: auto;
+
+    @include flex-mixin.flex-center;
+    flex-direction: column;
+
+    margin-top: 0;
   }
+
+  .form-article {
+    display: none;
+  }
+
+  .form-inside-container {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(15px);
+  }
+
 
   .form-login {
-    padding: 20px;
-  }
+    width: 100%;
+    height: auto;
 
-  .form-inside-container-left {
-    padding: 10px;
-  }
+    border: 1px solid red;
 
-  .form-vertical-container {
-    padding-right: 0;
+    backdrop-filter: blur(10px);
 
-    p {
-      font-size: 1rem;
-      text-align: center;
-    }
-  }
+    @include flex-mixin.flex-center;
+    flex-direction: column;
 
-  input {
-    font-size: 1rem;
-  }
-
-  button {
-    font-size: 1rem;
+    padding: 1rem;
   }
 }
