--- a/src/pages/Success/Success.scss
+++ b/src/pages/Success/Success.scss
@@ -5,17 +5,28 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  height: 100dvh;
+  height: 100vh;
   width: 100%;
+
+  padding: 1rem;
 }
 
 .success-bg {
   @include background-mixin.background-img('/success-bg.svg');
 }
 
+.success-logo {
+  width: 300px;
+  height: 300px;
+  background-color: black;
+
+  mask: url('/logo-success.svg') no-repeat center / contain;
+  -webkit-mask: url('/logo-success.svg') no-repeat center / contain;
+}
+
 .success {
-  width: 1300px;
-  height: auto;
+  width: 100%;
+  height: 100vh;
   padding: 100px;
 
   background: rgba(55, 53, 53, 0.6);
@@ -37,7 +48,7 @@
 
   p {
     font-size: 1.2rem;
-    font-weight: 200;
+    font-weight: 500;
     color: #F1F1E7;
     width: 660px;
     text-align: center;
@@ -66,11 +77,11 @@
   }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 740px) {
 
   .success {
     width: 100%;
-    padding: 5rem;
+    padding: 1rem;
 
     img {
       width: 100px;
@@ -82,7 +93,8 @@
     }
 
     p {
-      font-size: 1rem;
+      font-size: 0.8rem;
+      width: 100%;
     }
   }
 
