--- a/src/pages/Survey/Survey.scss
+++ b/src/pages/Survey/Survey.scss
@@ -5,15 +5,14 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  height: 100dvh;
+  min-height: 100vh;
   width: 100%;
 }
 
 .survey {
-  position: relative;
   z-index: 1;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   @include flex-mixin.flex-center;
   flex-direction: column;
@@ -63,7 +62,7 @@
 .survey-header {
   width: 100%;
   height: 40px;
-  padding-top: 1rem;
+  padding-top: 2rem;
   margin-bottom: 0.8rem;
 
   p {
@@ -77,7 +76,6 @@
   align-items: center;
   justify-items: center;
 }
-
 .question-block {
   width: 100%;
   height: auto;
@@ -124,7 +122,7 @@
 
   p {
     font-size: 1rem;
-    color: #333;
+    color: #1E1E1E;
     text-align: center;
   }
 }
@@ -174,7 +172,7 @@
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
 
   .survey-wrapper {
     height: auto;
@@ -191,7 +189,22 @@
 
   .survey-block {
     width: 90%;
-    padding: 5rem;
+    height: auto;
+    padding-bottom: 5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .survey-header {
+    margin-bottom: 3rem;
+  }
+
+  .survey-article {
+    p {
+      text-align: center;
+      width: 100%;
+      font-size:  0.8rem;
+    }
   }
 
   .radio-container {
@@ -201,7 +214,7 @@
     gap: 1rem;
     background-color: #f1f1e7;
     width: 100%;
-    height: 40px;
+    height: 50px;
     border-radius: 5px;
     padding-left: 1.1rem;
     cursor: pointer;
@@ -229,10 +242,31 @@
     }
 
     p {
-      font-size: 1rem;
-      color: #333;
-      text-align: center;
+      font-size: 0.8rem;
+      font-weight: 400;
     }
+  }
+
+  .survey-config {
+    width: 100%;
+    height: auto;
+
+    @include flex-mixin.flex-center;
+    flex-direction: row;
+
+    gap: 1.1rem;
+  }
+
+  .next-end-button {
+    width: 120px;
+    height: 40px;
+    font-size: 1.1rem;
+    font-weight: 500;
+  }
+
+  .prev-skip-button {
+    font-size: 1.1rem;
+    font-weight: 400;
   }
 }
 
