Added Chine and Arab languages

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -47,7 +47,7 @@
 
     .block-1__title {
       font-weight: 800;
-      font-size: clamp(36px, 10vw, 150px);
+      font-size: clamp(30px, 10vw, 150px);
       text-align: center;
       letter-spacing: 0.8px;
       padding-right: 2vw;
@@ -60,8 +60,7 @@
 
     .block-1__description {
       width: 60%;
-      height: auto;
-
+      height: 100px;
       position: relative;
       top: 20%;;
 
