--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -136,7 +136,7 @@
       .block-2__title {
         top: -0%;
         font-size: clamp(30px, 10vw, 20px);
-
+        text-shadow: 0px 5px 0px rgba(0, 0, 0, 0.25);
       }
 
     }
@@ -168,4 +168,29 @@
       }
     }
   }
+}
+
+@media (max-width: 400px) {
+  .blocks {
+    .block-1 {
+      width: 100%;
+      .block-1__description {
+        p {
+          width: 100%;
+        }
+        width: 100%;
+        text-align: justify;
+        border: 1px solid red;
+      }
+
+    }
+
+    .block-2 {
+      .block-2__title {
+        font-size: clamp(1rem, 10vw, 20px);
+      }
+    }
+
+  }
+
 }
