--- a/src/pages/Survey/Survey.scss
+++ b/src/pages/Survey/Survey.scss
@@ -19,7 +19,7 @@
 }
 
 .survey-bg {
-  @include background-mixin.background-img('/success-bg.svg');
+  @include background-mixin.background-img('/success-bg.webp');
 }
 
 .survey-block {
