--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -5,6 +5,8 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
+  position: relative;
+
   min-height: 100vh;
   width: 100%;
 
@@ -12,7 +14,7 @@
 }
 
 .form-bg {
-  background-image: url("/dark-bg.jpg");
+  background-image: url("/dark-bg.webp");
   filter: brightness(50%);
   background-size: cover;
   background-attachment: fixed;
@@ -33,14 +35,12 @@
   width: clamp(300px, 80vw, 1300px);
   height: 780px;
 
+  background-image: url("/form-back.svg");
 
-  border-radius: 1px;
+  border-radius: 4px;
 
   @include flex-mixin.flex-center;
-  flex-direction: column;
 
-  background-image: url("/form-back.svg");
-  padding: 50px;
 }
 
 .form-login {
@@ -98,7 +98,6 @@
 
 .form-sign-up-button {
     width: 100%;
-    height: 50px;
     font-weight: 400;
     font-size: 1rem;
     color: white;
@@ -144,7 +143,8 @@
 
 .form-inside-container-left {
   width: 100%;
-  height: 740px;
+  height: auto;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -152,6 +152,7 @@
   padding-top: 50px;
   padding-left: 20px;
   padding-right: 55px;
+  padding-bottom: 50px;
 
   h1 {
     margin-bottom: 70px;
@@ -175,7 +176,6 @@
     background-image: url("/form-back.svg");
     background-size: cover;
     background-attachment: fixed;
-    background-size: cover;
   }
 
   .form-container {
