--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -9,7 +9,9 @@
   height: 100vh;
   width: 100%;
 
-  background-image: url("/home-bg.svg");
+  position: relative;
+
+  background-image: url("/dark-bg.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -51,6 +53,8 @@
       text-align: center;
       letter-spacing: 0.8px;
       padding-right: 2vw;
+      display: inline-block;
+
 
       position: relative;
       left: 20%;
@@ -62,7 +66,7 @@
       width: 60%;
       height: 100px;
       position: relative;
-      top: 20%;;
+      top: 20%;
 
       display: flex;
       justify-content: flex-start;
@@ -81,7 +85,7 @@
         font-size: 1.2rem;
         text-decoration: underline;
         text-underline-offset: 7px;
-        text-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
+        text-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
       }
 
 
@@ -109,7 +113,7 @@
       color: white;
       font-weight: 800;
       font-size: clamp(36px, 8vw, 140px);
-      text-shadow: 0px 25px 0px rgba(0, 0, 0, 0.25);
+      text-shadow: 0 25px 0 rgba(0, 0, 0, 0.25);
 
       position: relative;
       left: -10%;
@@ -136,7 +140,7 @@
       .block-2__title {
         top: -0%;
         font-size: clamp(30px, 10vw, 20px);
-        text-shadow: 0px 5px 0px rgba(0, 0, 0, 0.25);
+        text-shadow: 0 5px 0 rgba(0, 0, 0, 0.25);
       }
 
     }
@@ -152,7 +156,7 @@
       .block-1__description {
         width: 100%;
         p {
-          font-size: clamp(0.1rem, 1vw, 0.5rem);
+          font-size: clamp(0.8rem, 1.5vw, 1rem);
           width: 175px;
         }
 
@@ -180,7 +184,6 @@
         }
         width: 100%;
         text-align: justify;
-        border: 1px solid red;
       }
 
     }
