--- a/src/pages/Success/Success.scss
+++ b/src/pages/Success/Success.scss
@@ -8,11 +8,14 @@
   height: 100vh;
   width: 100%;
 
-  padding: 1rem;
+  padding-bottom: 60px;
+  padding-top: 60px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .success-bg {
-  @include background-mixin.background-img('/success-bg.svg');
+  @include background-mixin.background-img('/success-bg.webp');
 }
 
 .success-logo {
