--- a/src/admin/Admin.scss
+++ b/src/admin/Admin.scss
@@ -1,6 +1,8 @@
+@use "../mixins/flex-mixin.scss";
+
 .admin-container {
   width: 100%;
-  height: 1000px;
+  height: 100vh;
 
   background: #3d3d3d;
 
@@ -19,29 +21,33 @@
   }
 
   input {
-    width: 100%;
+    width: 20%;
     height: 50px;
     background-color: white;
     padding: 0.5rem;
     border-bottom: 1px solid white;
+
+    outline: none;
+    border-radius: 0.5rem;
   }
 
-  button {
-    width: 20%;
-    height: 50px;
-    background-color: #3F4222;
-    font-weight: 700;
-    font-size: 1rem;
-    color: white;
+  .admin__button {
+    text-align: center;
+    width: auto;
+    height: auto;
+    padding: 1rem;
+    background-color: #ffffff;
+    border: 1px solid black;
+    color: black;
     border-radius: 2px;
-    border: none;
-
+    transition:  background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
     &:hover {
-      background-color: #4f532c;
+      background-color: rgba(255, 255, 255, 0.27);
       color: white;
       cursor: pointer;
     }
   }
+
 }
 
 .user-list table {
@@ -57,4 +63,38 @@
   padding: 0.5rem 1rem;
   border: 1px solid #ccc;
   text-align: left;
+}
+
+.admin-header {
+  width: 100%;
+
+  @include flex-mixin.flex-start;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.search-box-config {
+  width: 100%;
+  @include flex-mixin.flex-start;
+  flex-direction: row;
+  gap: 1rem;
+  padding-top: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-top: 2px solid white   ;
+
+  .close__button {
+    height: 50px;
+
+    padding: 1rem;
+    background-color: #f15a5a;
+    color: white;
+    border-radius: 4px;
+    transition:  background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.27);
+      color: white;
+      cursor: pointer;
+    }
+  }
 }
