--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,6 +22,7 @@
   display: inline-block;
 
   .menu-toggle {
+    @include flex-mixin.flex-center;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -29,6 +30,12 @@
     background: transparent;
     color: white;
     cursor: pointer;
+
+    padding: 13px 9px 13px 9px;
+
+    font-size: 0.9rem;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .submenu {
@@ -67,6 +74,17 @@
     img {
       width: 150px;
       height: 50px;
+    }
+  }
+
+  .menu-wrapper {
+    .menu-toggle {
+      width: 40px;
+      height: 40px;
+
+      font-size: 1rem;
+
+      padding: 8px 4px 8px 4px;
     }
   }
 }
