--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -7,7 +7,7 @@
 
   position: relative;
 
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
 
   margin: 0 auto;
@@ -63,7 +63,7 @@
     height: 25px;
     padding: 1rem;
 
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 
     color: rgba(255, 255, 255, 0.5);
     border-bottom: 1px solid rgba(255, 255, 255, 0.502);
@@ -80,6 +80,15 @@
       color: rgba(255, 255, 255, 0.5);
     }
   }
+}
+
+.form-section-buttons {
+  width: 280px;
+  height: auto;
+  margin: 0 auto;
+  gap: 1rem;
+  @include flex-mixin.flex-center;
+  flex-direction: column;
 }
 
 .form-button {
@@ -99,8 +108,18 @@
     }
 }
 
+.form-button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+
+  &:hover {
+    background-color: #3F4222;
+  }
+
+}
+
 .form-sign-up-button {
-    width: 100%;
+    width: auto;
     font-weight: 400;
     font-size: 1rem;
     color: white;
@@ -152,10 +171,7 @@
   flex-direction: column;
   align-items: flex-start;
 
-  padding-top: 50px;
-  padding-left: 20px;
-  padding-right: 55px;
-  padding-bottom: 50px;
+  padding: 50px 1.1rem 50px 1.1rem;
 
   h1 {
     margin-bottom: 70px;
@@ -169,12 +185,13 @@
 @media (max-width: 1000px) {
 
   .form-wrapper {
-    @include flex-mixin.flex-center;
+    display: flex;
     flex-direction: column;
 
     overflow: hidden;
+    height: 100vh;
 
-    padding: 1rem;
+    padding: 0 0.9rem 50px 0.9rem;
   }
 
   .form-bg {
@@ -199,22 +216,50 @@
     display: none;
   }
 
+  .form-button {
+    font-size: 1rem;
+    font-weight: 400;
+
+  }
+
   .form-inside-container {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(15px);
   }
 
+  .form-inside-container-left {
+    padding: 50px 6px 50px 6px;
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 40px;
+    }
+  }
+
+
 
   .form-login {
     width: 100%;
     height: auto;
+
+    font-size: 0.8rem;
 
     backdrop-filter: blur(10px);
 
     @include flex-mixin.flex-center;
     flex-direction: column;
 
-    padding: 1rem;
+    padding: 0;
+
+    input {
+      padding: 0.5rem;
+      height: auto;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .form-wrapper {
+    height: auto;
   }
 }
