--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -9,8 +9,6 @@
   height: 100vh;
   width: 100%;
 
-  position: relative;
-
   background-image: url("/dark-bg.webp");
   background-size: cover;
   background-position: center;
@@ -158,14 +156,19 @@
         width: 100%;
 
         p {
-          font-size: clamp(0.8rem, 1.5vw, 1rem);
+          font-size: clamp(0.8rem, 1vw, 1rem);
+          text-align: left;
           width: 100%;
         }
 
         .block-1__text {
           width: 100%;
+          img {
+            width: 15px;
+            height: 15px;
+          }
           a {
-            font-size: 1rem;
+            font-size: 0.8rem;
             text-shadow: none;
             position: relative;
           }
