--- a/src/pages/Success/Success.scss
+++ b/src/pages/Success/Success.scss
@@ -1,5 +1,6 @@
 @use "../../mixins/flex-mixin.scss";
 @use "../../mixins/background-mixin.scss";
+@use "../../mixins/substract.scss";
 
 .success-wrapper {
   @include flex-mixin.flex-center;
@@ -21,10 +22,6 @@
 .success-logo {
   width: 300px;
   height: 300px;
-  background-color: black;
-
-  mask: url('/logo-success.svg') no-repeat center / contain;
-  -webkit-mask: url('/logo-success.svg') no-repeat center / contain;
 }
 
 .success {
