Removed bugs with styles, added styles

--- a/src/mixins/substract.scss
+++ b/src/mixins/substract.scss
@@ -1,5 +1,5 @@
 @mixin sub-mix {
-  background: url('/home-bg.webp');
+  background: url('/assets/home-bg.webp');
   background-size: cover;
   filter: brightness(60%);
   background-repeat: no-repeat;
