--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -82,9 +82,8 @@
       width: 40px;
       height: 40px;
 
-      font-size: 1rem;
-
-      padding: 8px 4px 8px 4px;
+      font-size: 0.8rem;
+      padding: 0;
     }
   }
 }
