Removed bugs with styles, removed some trash code

--- a/src/mixins/_flex-mixin.scss
+++ b/src/mixins/_flex-mixin.scss
@@ -16,6 +16,12 @@
   align-items: center;
 }
 
+@mixin flex-start-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 @mixin flex-end {
   display: flex;
   justify-content: flex-end;
