--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -1,10 +1,10 @@
-@use '../../mixins/flex-mixin.scss';
+@use '../../mixins/flex-mixin';
 
 .header {
   width: 100%;
   height: 80px;
-  background: none;
 
+  background: none;
   position: absolute;
   top: 0;
 
@@ -12,7 +12,6 @@
 
   padding-left: 80px;
   padding-right: 80px;
-  padding-top: 30px;
 
   @include flex-mixin.flex-space-between;
 }
