--- a/src/pages/Form/styles/_FormHeader.scss
+++ b/src/pages/Form/styles/_FormHeader.scss
@@ -2,10 +2,8 @@
 
 .form-header {
   width: clamp(300px, 80vw, 1300px);
-  height: auto;
+  height: clamp(40px, 80vw, 80px);
   background: none;
-
-  padding: 0.5rem;
 
   z-index: 5001;
 
@@ -27,10 +25,6 @@
   .form-header {
     gap: 1rem;
     width: 100%;
-
-    margin-bottom: 30px;
-
-    padding: 80px 1rem 0 1rem;
   }
 
   .form-header-logo {
