--- a/src/pages/Form/styles/_form-wrapper.scss
+++ b/src/pages/Form/styles/_form-wrapper.scss
@@ -1,29 +1,22 @@
-@use "../../../mixins/flex-mixin.scss";
+@use "../../../mixins/_flex-mixin";
+@use "../../../mixins/_bg-image-settings";
 
 .form-wrapper {
+  height: auto;
+  padding: 1rem;
   @include flex-mixin.flex-center;
   flex-direction:  column;
-
-  position: relative;
-
-  height: 105vh;
-  width: 100%;
 
   margin: 0 auto;
 }
 
 .form-bg {
   background-image: url("/assets/dark-bg.webp");
+  @include bg-image-settings.bg-settings;
   filter: brightness(50%);
-  background-size: cover;
-  background-attachment: fixed;
   pointer-events: none;
-  overflow: hidden;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  inset: 0;
 }
