--- a/src/pages/Home/styles/_home-blocks.scss
+++ b/src/pages/Home/styles/_home-blocks.scss
@@ -1,5 +1,5 @@
-@use "../../../mixins/substract.scss";
-@use "../../../mixins/flex-mixin.scss";
+@use "../../../mixins/substract";
+@use "../../../mixins/flex-mixin";
 
 .blocks {
   width: 100%;
@@ -31,12 +31,13 @@
 
     .block-1__description {
       width: 60%;
-      height: 100px;
+      height: auto;
       position: relative;
       top: 20%;
 
-      display: flex;
-      justify-content: flex-start;
+      border: 1px solid red;
+
+      @include flex-mixin.flex-start-start;
       flex-direction: column;
 
 
