--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,41 +1,47 @@
+// Global import
 @use "./pages/Home/styles/Home";
 @use "./pages/Form/styles/Form";
 @use "./pages/Success/styles/Success";
 @use "./pages/Survey/styles/Survey";
 
+// Mixins import
+@use "./mixins/bg-image-settings";
 
-@font-face {
-  font-family: "Manrope";
-  src: url("/fonts/Manrope.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-@font-face {
-  font-family: "Montserrat";
-  src: url("/fonts/Montserrat-Regular.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
-
+// Global styles
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-
-html {
+body {
+  background-image: url("/assets/dark-bg.webp");
   font-family: "Manrope", "sans-serif";
+  @include bg-image-settings.bg-settings;
 }
 
-input {
-  outline: none;
+
+// Turn off styles
+input,
+textarea,
+select,
+button {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  box-shadow: none;
   border: none;
+  outline: none;
   background: none;
 }
 
-button {
-  outline: none;
-  border: none;
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
+
