Updated styles and meta

--- a/src/pages/Form/styles/_form-buttons.scss
+++ b/src/pages/Form/styles/_form-buttons.scss
@@ -15,16 +15,14 @@
   background-color: #3F4222;
   font-weight: 700;
   font-size: 1rem;
-  color: white;
   border-radius: 2px;
-  border: none;
+  color: white;
 
   transition: background-color 0.3s ease, color 0.3s ease;
 
   &:hover {
     background-color: #4f532c;
     color: white;
-    cursor: pointer;
   }
 }
 
@@ -43,12 +41,9 @@
   font-weight: 400;
   font-size: 1rem;
   color: white;
-  background: none;
-  border: none;
+}
 
-  &:hover {
-    text-decoration: underline;
-    text-underline-offset: 0.5rem;
-    cursor: pointer;
-  }
+.form-sign-up-button:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.5rem;
 }
