--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,10 @@ button {
   background: none;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
