--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @use "./pages/Form/styles/Form";
 @use "./pages/Success/styles/Success";
 @use "./pages/Survey/styles/Survey";
+@use "./pages/Admin/styles/Admin";
 
 // Mixins import
 @use "./mixins/bg-image-settings";
