--- a/src/styles.css
+++ b/src/styles.css
@@ -159,12 +159,12 @@
 }
 .form-wrapper {
   height: auto;
+  width: 100%;
   padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0 auto;
 }
 
 .form-bg {
@@ -857,6 +857,8 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #4f532c;
 }
 
 input,
@@ -881,6 +883,11 @@ input[type=search]::-webkit-search-cancel-button,
 input[type=search]::-webkit-search-results-button,
 input[type=search]::-webkit-search-results-decoration {
   display: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .loader-wrapper {
