--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,9 @@ body {
   background-image: url("/assets/dark-bg.webp");
   font-family: "Manrope", "sans-serif";
   @include bg-image-settings.bg-settings;
+  background-attachment: fixed;
+
+  background-color: #4f532c;
 }
 
 
@@ -48,6 +51,11 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   display: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 // App
