--- a/src/pages/Success/styles/_success-wrapper.scss
+++ b/src/pages/Success/styles/_success-wrapper.scss
@@ -6,7 +6,7 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
 
   padding: 60px 70px 60px 70px;
@@ -23,7 +23,7 @@
 
 .success {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   padding: 100px;
 
   background: rgba(55, 53, 53, 0.6);
