--- a/src/pages/Survey/styles/_survey-wrapper.scss
+++ b/src/pages/Survey/styles/_survey-wrapper.scss
@@ -5,14 +5,14 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 100%;
 }
 
 .survey {
   z-index: 1;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
 
   @include flex-mixin.flex-center;
   flex-direction: column;
