--- a/src/pages/Privacy/styles/_privacy-list.scss
+++ b/src/pages/Privacy/styles/_privacy-list.scss
@@ -15,6 +15,7 @@
     color: #F1F1E7;
     font-size: 1rem;
     letter-spacing: 0.2px;
+    font-weight: 600;
     font-family: "Montserrat", sans-serif;
   }
 }
