--- a/src/pages/Admin/styles/_admin-inputs.scss
+++ b/src/pages/Admin/styles/_admin-inputs.scss
@@ -7,6 +7,8 @@
   font-weight: 500;
   font-family: 'Console', Monaco, 'Andale Mono', monospace;
 
+  margin-bottom: 1rem;
+
   transition: width 2s ease-in-out;
 
   &:focus {
