--- a/src/styles.css
+++ b/src/styles.css
@@ -830,6 +830,7 @@
   font-size: 1rem;
   font-weight: 500;
   font-family: "Console", Monaco, "Andale Mono", monospace;
+  margin-bottom: 1rem;
   transition: width 2s ease-in-out;
 }
 .admin-input:focus {
@@ -841,6 +842,42 @@
   width: 100%;
   height: 100vh;
   background-color: #eeeeee;
+  padding: 1rem;
+  border: 1px solid black;
+}
+
+.admin-download-btn {
+  width: auto;
+  height: 50px;
+  background-color: #0b7eb4;
+  padding: 1rem;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.admin-download-btn:hover {
+  background-color: #075f89;
+}
+
+.admin-remove-btn {
+  width: auto;
+  height: 30px;
+  background-color: #ff0000;
+  padding: 1rem;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.admin-remove-btn:hover {
+  background-color: #c26666;
 }
 
 .table {
@@ -877,9 +914,13 @@
   border: 1px solid black;
   text-align: center;
   padding: 0.5rem;
+  width: auto;
 }
 .table-body td:nth-child(1) {
   background-color: #00c7ff;
+}
+.table-body td:last-child {
+  width: 150px;
 }
 
 .admin-header {
