Removed bugs with adaptation

--- a/src/pages/Form/styles/_FormHeader.scss
+++ b/src/pages/Form/styles/_FormHeader.scss
@@ -2,8 +2,11 @@
 
 .form-header {
   width: 70%;
-  height: clamp(40px, 80vw, 80px);
+  height: clamp(40px, 100vw, 80px);
   background: none;
+
+  position: relative;
+  top: 0;
 
   z-index: 5001;
 
@@ -25,6 +28,7 @@
   .form-header {
     gap: 1rem;
     width: 100%;
+    height: clamp(40px, 8vh, 80px);
   }
 
   .form-header-logo {
