--- a/src/pages/Form/styles/_form-wrapper.scss
+++ b/src/pages/Form/styles/_form-wrapper.scss
@@ -4,7 +4,7 @@
 .form-wrapper {
   height: auto;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 0 2rem 0;
   @include flex-mixin.flex-center;
   flex-direction:  column;
 }
