--- a/src/styles.css
+++ b/src/styles.css
@@ -153,7 +153,7 @@
 .form-wrapper {
   height: auto;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 0 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -317,7 +317,7 @@
   background-image: url("/assets/form-back.webp");
   background-size: cover;
   border-radius: 4px;
-  padding: 50px;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -975,6 +975,15 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #4f532c;
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
 
 html, body {
