--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,17 +30,14 @@
 }
 
 body {
-  background-image: url("/assets/dark-bg.webp");
   font-family: "Manrope", "sans-serif";
   @include bg-image-settings.bg-settings;
-  background-attachment: fixed;
-
   background-color: #4f532c;
-
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  backdrop-filter: blur(10px);
 }
 
 img {
