--- a/src/mixins/_background-mixin.scss
+++ b/src/mixins/_background-mixin.scss
@@ -6,8 +6,8 @@
   height: 100%;
   background-image: url(#{$url});
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
-  z-index: 1;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: -1;
 }
-
