--- a/src/pages/Home/styles/_home-blocks.scss
+++ b/src/pages/Home/styles/_home-blocks.scss
@@ -37,21 +37,20 @@
       flex-direction: column;
 
 
-      p {
+      .block_para {
         font-weight: 300;
         font-size: 1.3rem;
         letter-spacing: 0.8px;
-
         margin-bottom: 72px;
       }
 
-      a {
+      .link {
         font-size: 1.2rem;
         text-decoration: underline;
         text-underline-offset: 7px;
         text-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
+        margin-right: 1rem;
       }
-
 
       a, p {
         color: #F1F1E7;
@@ -60,16 +59,18 @@
       .block-1__text {
         @include flex-mixin.flex-start;
         flex-direction: row;
-        width: 100%;
+        width: auto;
+        border-radius: 10px;
+        padding: 1rem 1rem 1rem 1rem;
 
+        transition: background-color 0.3s ease-in-out;
 
-        a {
-          margin-right: 1rem;
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.1);
         }
 
+        cursor: pointer;
       }
-
-
     }
   }
 
