--- a/src/pages/Home/styles/_home-wrapper.scss
+++ b/src/pages/Home/styles/_home-wrapper.scss
@@ -1,10 +1,21 @@
 @use "../../../mixins/flex-mixin";
-@use "../../../mixins/_bg-image-settings";
+@use "../../../mixins/bg-image-settings";
 
 .home-wrapper {
   height: 100dvh;
   @include flex-mixin.flex-center;
   flex-direction:  column;
+}
+
+.home-bg {
+  background-image: url("/assets/dark-bg.webp");
+  @include bg-image-settings.bg-settings;
+  filter: brightness(50%);
+  pointer-events: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  inset: 0;
 }
 
 .home {
