--- a/src/pages/Privacy/styles/_privacy-list.scss
+++ b/src/pages/Privacy/styles/_privacy-list.scss
@@ -6,13 +6,14 @@
   width: 100%;
   height: auto;
 
+  color: black;
+
   p {
     margin-bottom: 5px;
   }
 
   ul li {
     list-style: inside;
-    color: #F1F1E7;
     font-size: 1rem;
     letter-spacing: 0.2px;
     font-weight: 600;
