--- a/src/pages/Privacy/styles/_privacy-wrapper.scss
+++ b/src/pages/Privacy/styles/_privacy-wrapper.scss
@@ -1,35 +1,34 @@
 @use "../../../mixins/flex-mixin";
-
 .privacy-wrapper {
   @include flex-mixin.flex-start-start;
   flex-direction: column;
   height: auto;
   width: 100%;
 
-  padding: 1rem;
-
   align-items: center;
 
   .privacy-h1 {
     font-weight: 700;
     font-size: 2.2rem;
-    text-align: center;
-    color: white;
   }
 }
 
+.privacy-h1-container {
+  width: 100%;
+  @include flex-mixin.flex-center;
+}
+
 .privacy-container {
-  width: 70%;
+  width: 100%;
   height: auto;
+
+  color: black;
 
   @include flex-mixin.flex-start-start;
   flex-direction: column;
 
-  background-color: rgba(55, 53, 53, 0.80);
-  backdrop-filter: blur(10px);
-  padding: 1rem;
-
-  border-radius: 20px;
+  background-color: rgba(245, 233, 218);
+  padding: 80px;
 
   p {
     font-size: 1rem;
@@ -42,10 +41,6 @@
     font-size: 1.3rem;
     text-align: center;
     margin-bottom: 10px;
-  }
-
-  p, h3 {
-    color: white;
   }
 
   a {
