--- a/src/pages/Form/styles/_form-responsive.scss
+++ b/src/pages/Form/styles/_form-responsive.scss
@@ -1,22 +1,32 @@
 @use "../../../mixins/flex-mixin";
+@use "../../../mixins/background-mixin";
 
 @media (max-width: 1000px) {
 
   .form-wrapper {
     @include flex-mixin.flex-center;
-    flex-direction: column;
     height: auto;
     padding: 0.9rem 30px 0.9rem 30px;
   }
 
   .form-login {
+    width: 100%;
     height: auto;
-  }
+
+    backdrop-filter: blur(10px);
+
+    @include flex-mixin.flex-center;
+    flex-direction: column;
+
+    padding: 0;
+
+    input {
+      padding: 0.5rem;
+    }
+    }
 
   .form-bg {
-    background-image: url("/assets/form-back.svg");
-    background-size: cover;
-    background-attachment: fixed;
+    background-image: url("/assets/form-back.webp");
   }
 
   .form-container {
@@ -52,25 +62,7 @@
 
     h1 {
       font-size: 1.5rem;
-      margin-bottom: 40px;
+      margin-bottom: 10px;
     }
   }
 }
-
-  @media (max-width: 400px) {
-    .form-login {
-      width: 100%;
-      font-size: 1rem;
-
-      backdrop-filter: blur(10px);
-
-      @include flex-mixin.flex-center;
-      flex-direction: column;
-
-      padding: 0;
-
-      input {
-        padding: 0.5rem;
-      }
-    }
-  }
