--- a/src/pages/Form/styles/_form-wrapper.scss
+++ b/src/pages/Form/styles/_form-wrapper.scss
@@ -1,12 +1,12 @@
 @use "../../../mixins/_flex-mixin";
-@use "../../../mixins/_bg-image-settings";
+@use "../../../mixins/background-mixin";
 
 .form-wrapper {
   height: auto;
   width: 100%;
   padding: 1rem 0 2rem 0;
   @include flex-mixin.flex-center;
-  flex-direction:  column;
+  flex-direction: column;
 }
 
 .form-inputs-container {
@@ -36,12 +36,6 @@
 }
 
 .form-bg {
-  background-image: url("/assets/dark-bg.webp");
-  @include bg-image-settings.bg-settings;
   filter: brightness(50%);
-  pointer-events: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  inset: 0;
+  @include background-mixin.background-img('/assets/dark-bg.webp');
 }
