--- a/src/styles.css
+++ b/src/styles.css
@@ -143,19 +143,18 @@
   .blocks .block-1 .block-1__description {
     width: 100%;
   }
-  .blocks .block-1 .block-1__description p {
-    font-size: clamp(0.7rem, 1vw, 1rem);
-    text-align: left;
+  .blocks .block-1 .block-1__description .block_para {
+    font-size: clamp(0.7rem, 1vw, 0.7rem);
   }
   .blocks .block-1 .block-1__description .block-1__text {
-    width: 100%;
+    width: auto;
   }
   .blocks .block-1 .block-1__description .block-1__text img {
     width: 15px;
     height: 15px;
   }
-  .blocks .block-1 .block-1__description .block-1__text a {
-    font-size: 0.7rem;
+  .blocks .block-1 .block-1__description .block-1__text .link {
+    font-size: 0.8rem;
     text-shadow: none;
     position: relative;
   }
@@ -200,16 +199,18 @@
 }
 
 .form-bg {
-  background-image: url("/assets/dark-bg.webp");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
   filter: brightness(50%);
-  pointer-events: none;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  inset: 0;
+  background-image: url(/assets/dark-bg.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: -1;
 }
 
 .form-section-buttons {
@@ -400,17 +401,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     height: auto;
     padding: 0.9rem 30px 0.9rem 30px;
   }
   .form-login {
+    width: 100%;
     height: auto;
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0;
+  }
+  .form-login input {
+    padding: 0.5rem;
   }
   .form-bg {
-    background-image: url("/assets/form-back.svg");
-    background-size: cover;
-    background-attachment: fixed;
+    background-image: url("/assets/form-back.webp");
   }
   .form-container {
     background: none;
@@ -440,22 +448,7 @@
   }
   .form-inside-container-left h1 {
     font-size: 1.5rem;
-    margin-bottom: 40px;
-  }
-}
-@media (max-width: 400px) {
-  .form-login {
-    width: 100%;
-    font-size: 1rem;
-    backdrop-filter: blur(10px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 0;
-  }
-  .form-login input {
-    padding: 0.5rem;
+    margin-bottom: 10px;
   }
 }
 .success-btn {
@@ -958,15 +951,7 @@ button.secondary:hover {
 
 body {
   font-family: "Manrope", "sans-serif";
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
   background-color: #4f532c;
-  min-height: 100vh;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-  backdrop-filter: blur(10px);
 }
 
 img {
